--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "api/*.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",      
-      "dest": "/$1"       
+      "src": "**/*",
+      "use": "@vercel/static"
     }
   ]
 }
