--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,24 @@
 {
+  "version": 2,
   "builds": [
+    {
+      "src": "api/*.py",
+      "use": "@vercel/python"
+    },
     {
       "src": "**/*",
       "use": "@vercel/static"
+    }    
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",      
+      "dest": "/$1"       
     }
   ]
 }
+
