--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
-  "functions": {
-    "api/hello.py": {
-      "runtime": "python3.9"
-    }
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/*.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "**/*",
+      "use": "@vercel/static"
+    }    
+  ]
 }
