--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/*.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "**/*",
-      "use": "@vercel/static"
-    }    
-  ]
+  "redirects": [{ "source": "/", "destination": "/api" }]
 }
